25.08.13 {Feed Duplicate issue fix,Post Thumbnails root fix }